--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
     <div class="bg-khaki">
         <div class="container" id="menu">
             <div class="row">
-                <div class="col.sm.12 p-5">
+                <div class="col-sm-12 p-5">
                     <h2 class="text-center" id="menu-heading">The Menu</h2>
                     <p class="lead">All of your classic Fish and Chip items can be found on our Menu. All cooked in beef dripping using Icelandic Haddock and potatoes sourced from local vendors.</p>
                     <div class="bg-white menu">
@@ -160,7 +160,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col.sm.12 p-5">
+            <div class="col-sm-12 p-5">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc bibendum egestas bibendum. Duis at arcu id mi tristique auctor quis vel risus. Fusce pharetra lacus non nisi dapibus, quis tristique ligula interdum. Donec lacinia libero nibh, a molestie metus viverra vel. Praesent sem libero, viverra et volutpat in, facilisis eu enim. Etiam erat sem, aliquet vel tincidunt id, elementum sit amet quam. Etiam vestibulum egestas metus, blandit hendrerit ex commodo quis. Phasellus id accumsan nulla. Phasellus consequat eleifend turpis id placerat. Maecenas fringilla, sapien eu accumsan laoreet, risus tellus egestas sapien, a eleifend lacus urna vel nisi. Nunc ultrices bibendum justo, sed auctor augue dignissim vitae. Sed a aliquam urna. Morbi tristique tincidunt dolor sed consequat. Etiam sit amet justo porttitor, tristique urna id, accumsan eros.</p>
                 <p>Vestibulum dapibus, leo nec molestie aliquam, elit leo feugiat quam, eu rutrum nibh felis sed dui. Nullam tristique finibus sem, nec auctor tellus gravida eu. Aliquam diam odio, sagittis in molestie sed, vehicula at sapien. In hac habitasse platea dictumst. Praesent ac nulla sed velit posuere malesuada. Praesent et leo sed tortor egestas volutpat. Pellentesque euismod sit amet dolor vitae ullamcorper. Curabitur eget fringilla tellus, sit amet mattis justo. Nam vel nulla ante. Integer est mauris, pellentesque id metus a, bibendum faucibus quam. Etiam lacus turpis, dignissim id turpis at, hendrerit efficitur ante. Nam sit amet pulvinar purus. Sed pulvinar erat sit amet bibendum pretium. Nulla fringilla tempor urna, a maximus ipsum pretium eget. Aliquam in condimentum lorem, ac vulputate lorem. Morbi ac blandit enim, quis varius magna.</p>
                 <p>Pellentesque id ex venenatis, blandit lacus sed, viverra ligula. Suspendisse efficitur ligula sapien, vel pretium lorem consequat at. Phasellus lacus augue, molestie nec justo feugiat, consectetur aliquam augue. Aliquam vel dui nec est tempus venenatis sit amet ac nisi. Ut sit amet velit interdum, convallis nisl a, cursus ipsum. Praesent gravida libero tortor, a rutrum mi maximus in. Pellentesque sodales at metus eget malesuada. Cras sit amet mi eros. Aliquam sit amet purus ac velit volutpat scelerisque. Ut accumsan lacus vehicula urna rutrum cursus vel vel leo. Aenean a sodales nibh. Duis rutrum id nibh non vulputate. Morbi non semper tellus. Duis egestas urna nunc, sit amet facilisis tellus aliquet sollicitudin.</p>
