--- a/home.html
+++ b/home.html
@@ -21,6 +21,7 @@
 
 <!-- In house -->
 <link rel="stylesheet" type='text/css' href="styles.css">
+<!-- <script src="script.js"></script> -->
 </head>
 
 <body>
@@ -158,8 +159,18 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container" id="find-us">
         <div class="row">
+            <div class="col-sm-12">
+                <h2 class="text-center" id="find-us-heading">Find us</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-7 p-5">
+                <div class="google-maps">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2350.049871898402!2d-1.9399200841401083!3d53.913089680101656!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487bf1c91c520617%3A0xff38a39649f178e1!2sKirkgate%20Fisheries!5e0!3m2!1sen!2suk!4v1655996969802!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
             <div class="col-sm-12 p-5">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc bibendum egestas bibendum. Duis at arcu id mi tristique auctor quis vel risus. Fusce pharetra lacus non nisi dapibus, quis tristique ligula interdum. Donec lacinia libero nibh, a molestie metus viverra vel. Praesent sem libero, viverra et volutpat in, facilisis eu enim. Etiam erat sem, aliquet vel tincidunt id, elementum sit amet quam. Etiam vestibulum egestas metus, blandit hendrerit ex commodo quis. Phasellus id accumsan nulla. Phasellus consequat eleifend turpis id placerat. Maecenas fringilla, sapien eu accumsan laoreet, risus tellus egestas sapien, a eleifend lacus urna vel nisi. Nunc ultrices bibendum justo, sed auctor augue dignissim vitae. Sed a aliquam urna. Morbi tristique tincidunt dolor sed consequat. Etiam sit amet justo porttitor, tristique urna id, accumsan eros.</p>
                 <p>Vestibulum dapibus, leo nec molestie aliquam, elit leo feugiat quam, eu rutrum nibh felis sed dui. Nullam tristique finibus sem, nec auctor tellus gravida eu. Aliquam diam odio, sagittis in molestie sed, vehicula at sapien. In hac habitasse platea dictumst. Praesent ac nulla sed velit posuere malesuada. Praesent et leo sed tortor egestas volutpat. Pellentesque euismod sit amet dolor vitae ullamcorper. Curabitur eget fringilla tellus, sit amet mattis justo. Nam vel nulla ante. Integer est mauris, pellentesque id metus a, bibendum faucibus quam. Etiam lacus turpis, dignissim id turpis at, hendrerit efficitur ante. Nam sit amet pulvinar purus. Sed pulvinar erat sit amet bibendum pretium. Nulla fringilla tempor urna, a maximus ipsum pretium eget. Aliquam in condimentum lorem, ac vulputate lorem. Morbi ac blandit enim, quis varius magna.</p>
@@ -193,6 +204,6 @@
             navbar.classList.remove("sticky");
             }
         }
-        </script>
+    </script>
         
 </body>
